commons-lang3・commons-collections4への依存を削除する
サプライチェーンリスク低減のため、両ライブラリの使用箇所（StringUtils.isBlank等の
null安全判定、CollectionUtils.isEmpty等）を標準Javaのみで代替する。呼び出し回数が
少なく、いずれも1行程度のnullチェックやObjects.toString等で置き換えられるため、
代替用のユーティリティクラスは作らずインライン化した。

Co-Authored-By: Claude Sonnet 5 <noreply@anthropic.com>